--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>A New Startup: Sign Up Today!</title>
+    <title>Kevins Test App!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap/css/theme/flatly/bootstrap.css" rel="stylesheet">
@@ -26,7 +26,7 @@
           <li><a href="#">Blog</a></li>
           <li><a href="#">Press</a></li>
         </ul>
-        <h3 class="text-muted">A New Startup</h3>
+        <h3 class="text-muted">Kevin's Really Cool Test App</h3>
       </div>
     	
       <div id="signupSuccess" class="alert alert-success" style="display:none">
@@ -39,14 +39,14 @@
         <p id="signupErrorText">Well this is embarrassing. It looks like we're having trouble getting you on the list.</p>
       </div>
       <div class="jumbotron">
-        <h1>The next big thing is coming...</h1>
-        <p class="lead">We're pretty thrilled to unveil our latest creation. Sign up below to be notified when we officially launch!</p>
+        <h1>Want to sign up for a really cool app?</h1>
+        <p class="lead">Sign up now to receive updates when the app has launched!</p>
         <p><a class="btn btn-lg btn-success"  data-toggle="modal" href="#signupModal">Sign up today</a></p>
       </div>
 
 
       <div class="footer">
-        <p>&copy; A New Startup 2013</p>
+        <p>&copy; Kevin Andres 2015</p>
       </div>
       
       <!-- Modal -->
