--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -77,6 +77,7 @@
                  </div>
              </div>
              <div class="modal-footer">
+               <button id="signup" type="button" class="btn btn-primary">Sign Up!</button>
              </div>
            </div><!-- /.modal-content -->
          </div><!-- /.modal-dialog -->
